apps/base/n8n/n8n.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n-system
  labels:
    networking.tinyrack.net/isolation: enabled
