apps/base/n8n/n8n.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
        observability.tinyrack.net/otlp-client: "true"
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:2.42.5@sha256:ce4efc817db002e8683314a8c4add468865d036fc43b1c39925d97b5c826a9ca
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
            - name: runner
              containerPort: 5679
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "4"
              memory: "4Gi"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-storage
      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: n8n-storage
