apps/base/n8n/n8n.task-runner.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-task-runner
  namespace: n8n-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n-task-runner
  template:
    metadata:
      labels:
        app: n8n-task-runner
    spec:
      containers:
        - name: n8n-task-runner
          image: n8nio/runners:2.42.5@sha256:4dd78ebb305193414a53cccddbe7bbaee4c5997baa6192129fe6266708271d49
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
